--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -7,18 +7,18 @@
     padding: 10px;
     text-align: center;
     box-sizing: border-box;
-    top: 30%;
-    left: 25%;
-    width: 50%;
+    top: 10%;
+    left: auto;
+    right: auto;
+    margin-left: 10%;
+    width: 80%;
+    max-height: 80vh;
     transition: all 0.3s ease-out;
+    overflow-y: scroll;
 }
 
 .ModalOpen {
     animation: openModal 0.4s ease-out forwards;
-}
-
-.ModalClosed {
-    animation: closeModal 0.4s ease-out forwards;
 }
 
 @keyframes openModal {
@@ -35,22 +35,5 @@
     100% {
         opacity: 1;
         transform: translateY(0);
-    }
-}
-
-@keyframes closeModal {
-    0% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    50% {
-        opacity: 0.8;
-        transform: translateY(60%);
-    }
-
-    100% {
-        opacity: 0;
-        transform: translateY(-100%);
     }
 }
